--- a/week_1/docker_sql/Pg_test.ipynb
+++ b/week_1/docker_sql/Pg_test.ipynb
@@ -624,7 +624,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.5 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -639,6 +639,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.5"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "8c3d4d9970fc5c09c50d9318a9c7fbf4d0159e4b28833276f5678ee22bded273"
+   }
   }
  },
  "nbformat": 4,
