Spark Sql Joins

--- a/Week 5/07_groupby_join.ipynb
+++ b/Week 5/07_groupby_join.ipynb
@@ -26,7 +26,7 @@
       "WARNING: Please consider reporting this to the maintainers of org.apache.spark.unsafe.Platform\n",
       "WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations\n",
       "WARNING: All illegal access operations will be denied in a future release\n",
-      "22/10/25 05:32:35 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "22/10/26 00:44:34 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
       "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
@@ -50,9 +50,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
-      "[Stage 0:>                                                          (0 + 1) / 1]\r",
-      "\r",
       "                                                                                \r"
      ]
     }
@@ -150,7 +147,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 2:================================================>      (177 + 4) / 200]\r"
+      "[Stage 2:================================================>      (175 + 4) / 200]\r"
      ]
     },
     {
@@ -179,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "74138e06",
    "metadata": {},
    "outputs": [
@@ -197,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "75b32ddf",
    "metadata": {},
    "outputs": [
@@ -217,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "ba588b19",
    "metadata": {},
    "outputs": [],
@@ -228,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "c219e8cb",
    "metadata": {},
    "outputs": [],
@@ -257,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "ba10f2b7",
    "metadata": {},
    "outputs": [
@@ -277,8 +274,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
+   "id": "b0c1e0bb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_green_revenue = spark.read.parquet('data_one/report/revenue/green')\n",
+    "df_yellow_revenue = spark.read.parquet('data_one/report/revenue/yellow')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "75bbac9b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_green_revenue_tmp = df_green_revenue \\\n",
+    "    .withColumnRenamed('amount', 'green_amount') \\\n",
+    "    .withColumnRenamed('number_records', 'green_number_records')\n",
+    "\n",
+    "df_yellow_revenue_tmp = df_yellow_revenue \\\n",
+    "    .withColumnRenamed('amount', 'yellow_amount') \\\n",
+    "    .withColumnRenamed('number_records', 'yellow_number_records')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "11ec341d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_join = df_green_revenue_tmp.join(df_yellow_revenue_tmp, on=['hour','zone'], how='outer')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "eab2efc1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------+----+------------+--------------------+-------------+---------------------+\n",
+      "|               hour|zone|green_amount|green_number_records|yellow_amount|yellow_number_records|\n",
+      "+-------------------+----+------------+--------------------+-------------+---------------------+\n",
+      "|2020-01-01 00:00:00|  68|        null|                null|        26.45|                    2|\n",
+      "|2020-01-01 00:00:00| 144|        null|                null|         22.3|                    1|\n",
+      "|2020-01-01 00:00:00| 142|        null|                null|         11.3|                    1|\n",
+      "|2020-01-01 00:00:00|  48|        null|                null|         22.6|                    2|\n",
+      "|2020-01-01 00:00:00| 186|        null|                null|         15.3|                    1|\n",
+      "+-------------------+----+------------+--------------------+-------------+---------------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_join.show(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "77e5ffdc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "df_join.write.parquet('data_one/report/revenue/total', mode='overwrite')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52141682",
    "metadata": {},
    "outputs": [],
    "source": []
